--- a/src/exercise-1/styles/App.css
+++ b/src/exercise-1/styles/App.css
@@ -30,6 +30,10 @@ li {
     color: dimgray;
 }
 
-navlink activeStyle {
-    color: red;
+a:link {
+    text-decoration: none;
 }
+
+a.active{
+     text-decoration: underline;
+ }
