--- a/src/exercise-2/styles/ProductDetails.css
+++ b/src/exercise-2/styles/ProductDetails.css
@@ -1,6 +1,9 @@
-.myProfile {
+.detail {
     text-align: left;
     margin: 30px auto auto 30px;
     color: dimgray;
+}
+
+.productTitle {
     font-weight: bold;
 }
